# distributed-systems-project

./: .gitignore  LICENSE  README.md  repo.url  report.typ  students.json
docker/: docker-compose.yml  nginx.conf
etc/: Dockerfile  nginx.conf
etc/spa/: README.md  angular.json  package-lock.json  package.json
etc/spa/src/: index.html  styles.sass
etc/spa/src/app/: app.component.html  app.component.spec.ts  app.component.ts  app.config.ts  app.routes.ts
etc/spa/src/app/dtos/: scooter.ts
etc/spa/src/app/services/: scooters.service.spec.ts  scooters.service.ts  (+1 more)
etc/spa/src/environments/: environment.ts
src/: README.md
src/docker/: compose.yaml
src/docker/setup_script/: Dockerfile  etcd_setup.sh
src/etc/crab-docs/: .gitignore  Cargo.toml
src/etc/crab-docs/src/: document.rs  main.rs  networking.rs
src/etc/paxos-admin/: Cargo.toml
src/etc/paxos-admin/src/: main.rs
src/server/: Dockerfile  config.go  consensus.go  etcd.go  etcd_setup.sh  go.mod  go.sum  http_networking.go  networking.go  paxos.pb.go  paxos.proto  paxos_grpc.pb.go  paxos_impl.go  server.go
src/server/cluster/: acceptor_requests.go  client_api.go  common.go  grpc.pb.go  grpc.proto  grpc_grpc.pb.go  leader_requests.go  paxos_acceptor.go  paxos_leader.go  setup.go
src/server/config/: config.go
src/server/etcd/: etcd.go
src/server/httpserver/: httpserver.go
src/server/paxos/: paxos.pb.go  paxos.proto  paxos_acceptor.go  paxos_grpc.pb.go  paxos_impl.go  paxos_leader.go  paxos_networking.go  paxos_networking_client.go  paxos_networking_server.go
src/server/util/: util.go
(+12 files in other folders)
